2007-03-31  Alan Modra  <amodra@bigpond.net.au>

	* gas/i386/nops-3.s: Don't use .align.

2007-03-30  Paul Brook  <paul@codesourcery.com>

	* gas/arm/thumb2_ldmstm.d: New test.
	* gas/arm/thumb2_ldmstm.s: New test.

2007-03-27  Alan Modra  <amodra@bigpond.net.au>

	* gas/ppc/reloc.s: New.
	* gas/ppc/reloc.d: New.

2007-03-26  Julian Brown  <julian@codesourcery.com>

	* gas/arm/neon-const.s: Use FP syntax for 0/-0.
	* gas/arm/vfp-neon-syntax-inc.s: Likewise, for 1.
	* gas/arm/neon-cov.s: Use float syntax for FP immediate.

2007-03-24  Paul Brook  <paul@codesourcery.com>
	Mark Shinwell  <shinwell@codesourcery.com>

	* gas/arm/archv6.s: Add new SRS tests.
	* gas/arm/archv6.d: Update expected output.
	* gas/arm/thumb32.s: Add new SRS tests.
	* gas/arm/thumb32.d: Update expected output.
	* gas/arm/srs-t2.d: New.
	* gas/arm/srs-t2.l: New.
	* gas/arm/srs-t2.s: New.
	* gas/arm/srs-arm.d: New.
	* gas/arm/srs-arm.l: New.
	* gas/arm/srs-arm.s: New.

2007-03-23  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/rex.s: Add tests for rex.WRXB.
	* gas/i386/rex.d: Updated.

	* gas/i386/rex.d: Replace rex64XYZ with rex.WRXB.
	* gas/i386/x86-64-io-intel.d : Likewise.
	* gas/i386/x86-64-io-suffix.d: Likewise.
	* gas/i386/x86-64-io.d: Likewise.
	* gas/i386/x86-64-opcode.d: Likewise.

2007-03-21  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/4218
	* gas/i386/nops.s: Add testcases for nop r/m.
	* gas/i386/x86-64-nops.s: Likewise.

	* gas/i386/x86-64-opcode.s: Add testcases for xchg with %ax,
	%eax and %rax.

	* gas/i386/nops.d: Updated.
	* gas/i386/x86-64-nops.d: Likewise.
	* gas/i386/x86-64-opcode.d: Likewise.

2007-03-21  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/i386.exp: Run nops-3.

	* gas/i386/nops-3.d: New file.
	* gas/i386/nops-3.s: Likewise.

2007-03-20  Mark Shinwell  <shinwell@codesourcery.com>

	* gas/arm/mul-overlap.s: Don't use %type.
	* gas/arm/mul-overlap.l: Update line numbers.
	* gas/arm/mul-overlap-v6.s: Don't use %type.
